margin n spacing correction

--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@
 }
 
 .rating {
+    color: #00c548;
   unicode-bidi: bidi-override;
   direction: rtl;
   text-align: right;
@@ -1361,7 +1362,7 @@ right:40px;
 }
 
 .loocation2 {
-  margin: 3% 0%;
+    margin: 1.5% 0%;
 }
 
 .loocation2 h3 span{
@@ -1454,7 +1455,7 @@ right:40px;
 
 
 .loocation2 h3.sports {
-      margin-bottom: 3%;
+    margin-bottom: 0%;
 }
 
 .bg-green{
@@ -1737,7 +1738,7 @@ right:40px;
     border: 1px solid #999;
     margin: 20px auto;
     width: 150px;
-    height: 150px;
+    height: 140px;
     text-align: center;
      color:#fff!important;
     cursor: pointer;
@@ -2102,7 +2103,7 @@ input.input-form {
 }
 .property-location {
     background: #f9f9f9;
-    padding-bottom: 47px;
+    padding-bottom: 30px;
 }
 .card.float-card .form-title {
     text-align: center;
